docs(readme.md): adding links to shield

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,13 @@ install:
 cache:
   directories:
     - node_modules
+notifications:
+  email: false    
 jobs:
   include:
     - stage: release
+      before_script:
+        - npm prune
       script:
         - npm run test
       after_success:
