--- a/package.json
+++ b/package.json
@@ -14,6 +14,20 @@
     "type": "git",
     "url": "https://github.com/dbaccello/case-sensing.git"
   },
+  "keywords": [
+    "string",
+    "text",
+    "case",
+    "sensing",
+    "lowercase",
+    "uppercase",
+    "sentence",
+    "capitalize",
+    "title",
+    "proper",
+    "alternating",
+    "inverse"
+  ],
   "author": "Diego Baccello <dbaccello@outlook.it> (https://www.baccello.it/)",
   "license": "MIT",
   "bugs": {
